--- a/.coveragerc
+++ b/.coveragerc
@@ -1,8 +1,6 @@
 [run]
-relative_files = True
-
-[report]
 omit =
-    */site-packages/*
-    */python?.?/*
-    ckan/*
+    deepl/__main__.py
+    venv/*
+    tests/*
+    setup.py
