--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,13 +41,13 @@ jobs:
           poetry install
       - name: lint
         run: |
-          poetry run black --check --fast aioambient
-          poetry run flake8 aioambient
-          poetry run pydocstyle aioambient
-          poetry run pylint aioambient
+          poetry run black --check --fast regenmaschine
+          poetry run flake8 regenmaschine
+          poetry run pydocstyle regenmaschine
+          poetry run pylint regenmaschine
       - name: typing
         run: |
-          poetry run mypy --ignore-missing-imports aioambient
+          poetry run mypy --ignore-missing-imports regenmaschine
 
   coverage:
     runs-on: ubuntu-latest
@@ -61,7 +61,7 @@ jobs:
           pip install poetry
           poetry install
       - run: |
-          poetry run py.test -s --verbose --cov-report term-missing --cov-report xml --cov=aioambient tests
+          poetry run py.test -s --verbose --cov-report term-missing --cov-report xml --cov=regenmaschine tests
       - uses: codecov/codecov-action@v1.0.3
         with:
           token: ${{secrets.CODECOV_TOKEN}}
