--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "aioambient"
-version = "1.0.0"
-description = "A clean, async-friendly library for the Ambient Weather API"
+name = "regenmaschine"
+version = "1.5.2"
+description = "A simple API for RainMachine sprinkler controllers"
 readme = "README.md"
 authors = ["Aaron Bach <bachya1208@gmail.com>"]
 license = "MIT"
-repository = "https://github.com/bachya/aioambient"
+repository = "https://github.com/bachya/regenmaschine"
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
@@ -19,13 +19,11 @@ classifiers = [
 
 [tool.poetry.dependencies]
 aiohttp = "^3.6.2"
-python = "^3.6.1"
-python-engineio = ">= 3.9.3"
-python-socketio = ">=4.3.1"
-websockets = "^8.1"
+python = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
 aresponses = "^1.1.1"
+asynctest = "^0.13.0"
 black = "^19.10b0"
 flake8 = "^3.7.9"
 mypy = "^0.740"
@@ -34,6 +32,7 @@ pydocstyle = "^4.0.1"
 pylint = "^2.4.3"
 pytest-aiohttp = "^0.3.0"
 pytest-cov = "^2.8.1"
+pytest-mock = "^1.11.2"
 
 [build-system]
 requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
