--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,40 +1,37 @@
 [tool.poetry]
-name = "ukrdict"
-version = "0.1.6"
-description = "CLI tool for looking up Ukrainian words meaning."
-authors = ["serhii73 <aserhii@protonmail.com>"]
+name = "pyairvisual"
+version = "3.0.2"
+description = "A simple API for AirVisual air quality data"
+readme = "README.md"
+authors = ["Aaron Bach <bachya1208@gmail.com>"]
 license = "MIT"
-readme = "README.rst"
-homepage = "https://github.com/serhii73/ukrdict"
-repository = "https://github.com/serhii73/ukrdict"
-keywords = ["Ukraine", "Ukrainian", "dictionary", "application"]
+repository = "https://github.com/bachya/pyairvisual"
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
-    "Environment :: Console",
     "License :: OSI Approved :: MIT License",
-    "Natural Language :: Ukrainian",
-    "Operating System :: POSIX",
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-beautifulsoup4 = "4.8.0"
-click = "7.0"
-lxml = "4.4.1"
-requests = "2.22.0"
+aiohttp = "^3.6.2"
+python = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
-beautifulsoup4 = "4.8.0"
-click = "7.0"
-lxml = "4.4.1"
-pre-commit = "1.18.3"
-requests = "2.22.0"
-
-[tool.poetry.scripts]
-ukrdict = "ukrdict.__main__:main"
+aresponses = "^1.1.1"
+black = "^19.10b0"
+flake8 = "^3.7.9"
+mypy = "^0.740"
+pre-commit = "^1.20.0"
+pydocstyle = "^4.0.1"
+pylint = "^2.4.3"
+pytest-aiohttp = "^0.3.0"
+pytest-cov = "^2.8.1"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
 build-backend = "poetry.masonry.api"
