--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,13 @@
-*.py[cod]
-
-# C extensions
-*.so
-
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-__pycache__
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
+# example checkpoints
+irrad_spectroscopy/examples/.ipynb_checkpoints/
+# example output folder
+irrad_spectroscopy/examples/output/
+# pyc
+*.pyc
+# pycharm
+.idea/
+# eclipse
 .project
 .pydevproject
+# egg-info folder
+irrad_spectroscopy.egg-info/
