--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,45 +1,82 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+name: CI
 
-name: Validate iceshelf
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+on: [push, pull_request]
 
 jobs:
-  build:
-
+  tests:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v2
       with:
-        python-version: "3.9"
+        fetch-depth: 1
+
     - name: Install dependencies
       run: |
-        sudo apt-get install par2
-        sudo apt-get install gnupg
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+        sudo apt-get update
+        sudo apt-get install -y libffi-dev pkg-config bison flex
+
+    - name: Record version
       run: |
-        # DISABLED FLAKE8 since we're not ready yet
-        # stop the build if there are Python syntax errors or undefined names
-        #flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        #flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Run testsuite
+        export VER=$(git describe --always --tags)
+        echo ${VER}
+
+    ###### Install tools ######
+
+    - name: Build MicroPython
+      id: build_micropython
       run: |
-        ./extras/testsuite/test.sh insecure
-    #- name: Test with pytest
-    #  run: |
-    #    pytest
+        echo "Building micropython"
+        git clone --depth 1 https://github.com/micropython/micropython.git
+        pushd micropython/mpy-cross
+        make
+        popd
+        pushd micropython/ports/unix
+        git describe --always --tags
+        make submodules
+        make
+        export PATH=$PATH:$PWD
+        echo "::set-output name=bin_dir::$PWD"
+        test $(micropython -c 'print("test")') = "test"
+        popd
+
+    - name: Build binutils-esp32ulp
+      id: build_binutils
+      run: |
+        echo "Building binutils-esp32ulp"
+        git clone --depth 1 https://github.com/espressif/binutils-esp32ulp.git
+        pushd binutils-esp32ulp
+        git describe --always --tags
+        ./configure --target=esp32ulp-elf --prefix=$PWD/dist --disable-doc --disable-gdb --disable-libdecnumber --disable-readline --disable-sim
+        echo "MAKEINFO = :" >> Makefile
+        make
+        make install-strip
+        export PATH=$PATH:$PWD/dist/bin
+        echo "::set-output name=bin_dir::$PWD/dist/bin"
+        esp32ulp-elf-as --version | grep 'esp32ulp-elf' > /dev/null
+        popd
+
+    ###### Run tests ######
+
+    - name: Run unit tests
+      id: unit_tests
+      run: |
+        export PATH=$PATH:${{ steps.build_micropython.outputs.bin_dir }}
+        cd tests
+        ./00_unit_tests.sh
+
+    - name: Run compat tests
+      id: compat_tests
+      run: |
+        export PATH=$PATH:${{ steps.build_micropython.outputs.bin_dir }}
+        export PATH=$PATH:${{ steps.build_binutils.outputs.bin_dir }}
+        cd tests
+        ./01_compat_tests.sh
+
+    - name: Run compat tests with RTC macros
+      id: compat_rtc_tests
+      run: |
+        export PATH=$PATH:${{ steps.build_micropython.outputs.bin_dir }}
+        export PATH=$PATH:${{ steps.build_binutils.outputs.bin_dir }}
+        cd tests
+        ln -s ../binutils-esp32ulp  # already cloned earlier. reuse.
+        ./02_compat_rtc_tests.sh
