--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
-pbr
-Sphinx>=5.0.0
+web3 == 3.16.4
+eth-abi == 0.5.0
+eth-utils == 0.7.1
+eth-testrpc == 1.3.0
+eth-keys == 0.1.0b3
+pytz == 2017.3
+rlp == 0.6.0
+requests == 2.18.4
+numpy == 1.14.0
+matplotlib == 2.1.0
+texttable == 1.2.1
+python-dateutil == 2.6.1
+filelock == 3.0.0
+appdirs
+
