--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,56 +1,40 @@
-name: check
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
+name: Python application
+
 on:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
-  test:
-    name: Test with Python ${{ matrix.py }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        py:
-          - "3.10"
-          - "3.9"
-          - "3.8"
-          - "3.7"
-    steps:
-      - name: Setup python for test ${{ matrix.py }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.py }}
-      - uses: actions/checkout@v2
-      - name: Install tox-gh
-        run: python -m pip install tox-gh
-      - name: Setup test suite
-        run: tox
-      - if: ${{ matrix.py == '3.10' }}
-        name: Generate coverage data
-        run: .tox/py310/bin/coverage lcov -o coverage/lcov.info
-      - if: ${{ matrix.py == '3.10' }}
-        name: Coveralls
-        uses: coverallsapp/github-action@main
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+  build:
 
-  publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    needs: [test]
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
+    env: 
+      INTEGRATION: 1
     steps:
-      - name: Setup python to build package
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
-      - name: Install build
-        run: python -m pip install build
-      - uses: actions/checkout@v2
-      - name: Build sdist and wheel
-        run: python -m build -s -w . -o dist
-      - name: Publish to PyPi
-        uses: pypa/gh-action-pypi-publish@main
-        with:
-          skip_existing: true
-          user: ${{ secrets.pypi_user }}
-          password: ${{ secrets.pypi_password }}
+    - uses: actions/checkout@v2
+    - name: Set up Python 2.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Install development dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pipenv
+        pipenv install --dev
+    - name: Lint with flake8
+      run: |
+        pipenv run flake8
+    - name: Test formatting compliance with yapf
+      run: |
+        pipenv run yapf -rd uberpoet/ test/ *py
+    - name: Test that isort was run
+      run: |
+        pipenv run isort -c
+    - name: Run pytest
+      run: |
+        pipenv run pytest --cov=uberpoet --cov-report xml:cov.xml --cov-report term-missing
