--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,27 +1,70 @@
-name: Tests
+name: test
 
 on:
-  pull_request:
   push:
-    branches: main
+    branches:
+      - main
+      - "test-me-*"
+    tags:
+      - "*"
+  pull_request:
+    branches:
+      - main
+
+# Set permissions at the job level.
+permissions: {}
 
 jobs:
-  test:
-    name: test
+  lint:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-      - name: Install Dependencies
-        run: python3 -m pip install -U pip -r requirements.txt
-      - name: Build Docs
-        run: sphinx-build -n -W -q -b html -d _build/doctrees . _build/html
+    - uses: actions/checkout@v3
+
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.9
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install tox
+
+    - name: Lint
+      run: tox -e lint
+
+  test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python: [
+          "3.7.1",
+          "3.7",
+          "3.8",
+          "3.9",
+          "3.10",
+          "3.11",
+        ]
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install tox
+
+    - name: Test
+      run: tox -e py
