--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,10 @@
-build/
-__pycache__
-*.py[cod]
+*.pyc
+*.orig
 *~
-@*
-/build
-/env
-docs/build/
+*.log
 *.iml
-/out/
-.venv/
-.mypy_cache/
-.incremental_checker_cache.json
-.cache
-dmypy.json
-.dmypy.json
-
-# Packages
-*.egg
-*.egg-info
-*.eggs
-
-# IDEs
-.idea
-*.swp
-.vscode
-
-# Operating Systems
-.DS_Store
-
-# Coverage Files
-htmlcov
-.coverage*
-
-# pytest cache
-.pytest_cache/
-
-.tox
+*.egg-info/
+.eggs/
+.tox/
+build/
+dist/
