--- a/{{cookiecutter.project_slug}}/.gitignore
+++ b/{{cookiecutter.project_slug}}/.gitignore
@@ -1,6 +1,9 @@
 .idea
 mlruns
 
+# Ignore example outputs
+examples/*/output/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -105,7 +108,3 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
-# vim hipsters
-*.swp
-*.swo
