--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-.idea
-mlruns
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -10,7 +7,9 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.idea
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -26,7 +25,6 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -48,7 +46,6 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-.pytest_cache/
 
 # Translations
 *.mo
@@ -57,7 +54,6 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
 
 # Flask stuff:
 instance/
@@ -84,14 +80,13 @@ celerybeat-schedule
 # SageMath parsed files
 *.sage.py
 
-# Environments
+# dotenv
 .env
+
+# virtualenv
 .venv
-env/
 venv/
 ENV/
-env.bak/
-venv.bak/
 
 # Spyder project settings
 .spyderproject
@@ -105,7 +100,3 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
-# vim hipsters
-*.swp
-*.swo
