--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,35 @@
-# SDK config file
-Qconfig.py
-
-# ply outputs
-qiskit/qasm/parser.out
-
-# editor files
-.vscode/
 .idea/
-
-#standard python ignores follow
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
-.pytest_cache/
 *.py[cod]
 *$py.class
+
+.pytest_cache
 
 # C extensions
 *.so
 
 # Distribution / packaging
 .Python
-env/
 build/
 develop-eggs/
 dist/
 downloads/
 eggs/
 .eggs/
+lib/
+lib64/
 parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -49,17 +44,16 @@ pip-delete-this-directory.txt
 # Unit test / coverage reports
 htmlcov/
 .tox/
+.nox/
 .coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
-*,cover
+*.cover
+*.py,cover
 .hypothesis/
-test/python/*.log
-test/python/*.pdf
-test/python/*.prof
-.stestr/
+.pytest_cache/
 
 # Translations
 *.mo
@@ -68,6 +62,8 @@ test/python/*.prof
 # Django stuff:
 *.log
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -85,61 +81,53 @@ target/
 # Jupyter Notebook
 .ipynb_checkpoints
 
+# IPython
+profile_default/
+ipython_config.py
+
 # pyenv
 .python-version
 
-# celery beat schedule file
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
 
-# dotenv
+# Environments
 .env
-
-# virtualenv
 .venv
+env/
 venv/
 ENV/
+env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
+.spyproject
 
 # Rope project settings
 .ropeproject
 
-.DS_Store
+# mkdocs documentation
+/site
 
-dummyscripts/*
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
-token.json
-
-tutorial/rst/_build/*
-
-test/python/test_qasm_python_simulator.pdf
-
-doc/_build/*
-
-doc/**/_autodoc
-
-qiskit/bin/*
-
-test/python/test_save.json
-
-test/python/*.tex
-
-out/*
-
-# CMake generates this file on the fly
-qiskit/providers/local/qasm_simulator_cpp
-qiskit/providers/legacysimulators/qasm_simulator_cpp
-
-src/qasm-simulator-cpp/test/qubit_vector_tests
-
-*.o
-
-# Cython pass
-qiskit/transpiler/passes/**/cython/**/*.cpp
-
-docs/api/*
-docs/stubs/*
+# Pyre type checker
+.pyre/
