--- a/tox.ini
+++ b/tox.ini
@@ -1,40 +1,20 @@
 [tox]
-minversion = 2.1
-envlist = py35, py36, py37, py38, lint
-skipsdist = True
+envlist = py36, py37, py38, py39, py310
+minversion = 3.3.0
+isolated_build = true
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
 
 [testenv]
-usedevelop = true
-install_command = pip install -c{toxinidir}/constraints.txt -U {opts} {packages}
-setenv =
-  VIRTUAL_ENV={envdir}
-  LANGUAGE=en_US
-  LC_ALL=en_US.utf-8
-  QISKIT_SUPPRESS_PACKAGING_WARNINGS=Y
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/requirements-dev.txt
-       keyrings.alt>=3.0.0
-commands =
-    stestr run {posargs}
-
-[testenv:lint]
-basepython = python3
 deps =
-  pycodestyle
-  pylint
-  setuptools>=40.1.0
-  pyjwt>=1.7.1
-  keyring>=10.6.0
+    asynctest >= 0.13.0
+    pytest >= 6.2.5
+    pytest-cov >= 3.0.0
 commands =
-  pycodestyle qiskit/providers/honeywell test/
-  pylint -rn --rcfile={toxinidir}/.pylintrc qiskit/providers/honeywell test/
-
-[testenv:docs]
-basepython = python3
-deps =
-    -r{toxinidir}/requirements-dev.txt
-commands =
-  sphinx-build -b html -W {posargs} docs/ docs/_build/html
-
-[pycodestyle]
-max-line-length = 100
+    pytest --cov-report xml --cov={envsitepackagesdir}/whodap
